cluster/apps/guestbook/redis-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  namespace: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: master
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: guestbook
spec:
  selector:
    app: redis
    role: master
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-leader
  namespace: guestbook
spec:
  selector:
    app: redis
    role: master
  ports:
    - port: 6379
      targetPort: 6379
