cluster/apps/guestbook/redis-replica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-replica
  namespace: guestbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
      role: replica
  template:
    metadata:
      labels:
        app: redis
        role: replica
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          ports:
            - containerPort: 6379
          command:
            - redis-server
            - --replicaof
            - redis-master
            - "6379"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-replica
  namespace: guestbook
spec:
  selector:
    app: redis
    role: replica
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-follower
  namespace: guestbook
spec:
  selector:
    app: redis
    role: replica
  ports:
    - port: 6379
      targetPort: 6379
